Drink and Layer added

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway&display=swap");
 
 * {
   box-sizing: border-box;
@@ -6,14 +6,12 @@
 
 html {
   font-size: 15px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 body {
   margin: 0;
-
-  background-image: url('./img/spots.png');
-
+  background-image: url("./img/spots.png");
   color: white;
 }
 
@@ -32,7 +30,7 @@ h1,
 h2 {
   margin-bottom: 1rem;
 
-  font-family: 'Great Vibes', fantasy;
+  font-family: "Great Vibes", fantasy;
   font-weight: 400;
   font-size: 3rem;
 }
@@ -48,7 +46,6 @@ h3 {
 header {
   padding: 1rem 0 1rem 0;
   height: 5rem;
-
   background-color: #301a1a;
 }
 
@@ -60,8 +57,7 @@ header {
 .site-logo {
   width: 180px;
   height: 50px;
-
-  background-image: url('./img/site-logo.png');
+  background-image: url("./img/site-logo.png");
   background-size: contain;
 }
 
@@ -74,18 +70,14 @@ header {
 nav {
   width: 10rem;
   padding: 1rem;
-
   background-color: #301a1a;
 }
 
 nav a {
   display: block;
-
   margin: 1rem;
-
   color: #ddd;
   border-bottom: 1px solid transparent;
-
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -103,11 +95,9 @@ nav a:hover {
   height: 3rem;
   padding: 0;
   border: none;
-
   background-color: transparent;
-  background-image: url('./img/menu.png');
+  background-image: url("./img/menu.png");
   background-size: contain;
-
   cursor: pointer;
 }
 
@@ -123,8 +113,7 @@ nav a:hover {
 
 .banner {
   padding-top: 0;
-
-  background-image: url('./img/beans.jpg');
+  background-image: url("./img/beans.jpg");
   background-size: cover;
   background-position: top center;
 }
@@ -132,7 +121,6 @@ nav a:hover {
 .intro {
   padding-top: 30rem;
   padding-bottom: 3rem;
-
   text-align: center;
 }
 
@@ -150,7 +138,6 @@ nav a:hover {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-
   margin-bottom: 4rem;
 }
 
@@ -178,7 +165,7 @@ nav a:hover {
 }
 
 .drink__cup--selected {
-  background-image: url('./img/cup-selected.png');
+  background-image: url("./img/cup-selected.png");
   background-size: contain;
 }
 
@@ -192,19 +179,16 @@ nav a:hover {
 
 .drink__controls {
   margin-top: 1rem;
-
   text-align: center;
 }
 
 .order-btn {
   padding: 0.5rem 1rem;
-
   color: white;
   background-color: #ea946f;
   border: none;
   box-shadow: 0 0 5px #444;
   border-radius: 1rem;
-
   transition: 300ms;
   cursor: pointer;
 }
@@ -232,7 +216,6 @@ nav a:hover {
   height: 1rem;
   margin-right: 0.5rem;
   border-radius: 0.5rem;
-
   background-color: brown;
   box-shadow: 0 0 5px #333;
 }
@@ -244,25 +227,20 @@ nav a:hover {
 .gallery {
   padding-top: 0;
   height: 100vh;
-
   color: white;
-  background-image: url('./img/gallery.jpg');
+  background-image: url("./img/gallery.jpg");
   background-size: cover;
   background-position: top center;
   background-attachment: fixed;
-  /* position: relative; */
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .gallery p {
-  /* position: absolute;
-  top: 50%;
-  left: 50%; */
   max-width: 1000px;
   padding: 10%;
-  font-size: 15px;
+  font-size: 1.5rem;
   text-shadow: 0px 5px 3px grey;
 }
 
